Cleaned up how we record dependencies